// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > matches snapshot for default state 1`] = `
<div
  class="flex flex-col gap-1.5"
>
  <label
    class="text-[14px] font-medium text-[#374151] leading-[18px] tracking-[0.02em]"
    for="_r_9_"
  >
    Name
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="w-full rounded-[16px] border bg-white text-[#1F2937] placeholder:text-[#4B5563] transition-all duration-150 ease-out border-[#CBD5E1] focus:border-[#2B5FD9] focus:ring-[#2B5FD9] focus:ring-[3px] focus:ring-opacity-30 outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#2B5FD9] h-11 px-3 text-[16px]"
      id="_r_9_"
      placeholder="Enter name"
    />
  </div>
</div>
`;

exports[`TextField > matches snapshot for disabled state 1`] = `
<div
  class="flex flex-col gap-1.5"
>
  <label
    class="text-[14px] font-medium text-[#374151] leading-[18px] tracking-[0.02em]"
    for="_r_b_"
  >
    Disabled
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="w-full rounded-[16px] border placeholder:text-[#4B5563] transition-all duration-150 ease-out border-[#CBD5E1] focus:border-[#2B5FD9] focus:ring-[#2B5FD9] focus:ring-[3px] focus:ring-opacity-30 bg-[#E2E8F0] text-[#CBD5E1] cursor-not-allowed outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#2B5FD9] h-11 px-3 text-[16px]"
      disabled=""
      id="_r_b_"
    />
  </div>
</div>
`;

exports[`TextField > matches snapshot for error state 1`] = `
<div
  class="flex flex-col gap-1.5"
>
  <label
    class="text-[14px] font-medium text-[#374151] leading-[18px] tracking-[0.02em]"
    for="_r_a_"
  >
    Email
  </label>
  <div
    class="relative"
  >
    <input
      aria-describedby="_r_a_-error"
      aria-invalid="true"
      class="w-full rounded-[16px] border text-[#1F2937] placeholder:text-[#4B5563] transition-all duration-150 ease-out border-[#EF4444] bg-[#FEF2F2] focus:ring-[#EF4444] focus:ring-[3px] focus:ring-opacity-30 outline-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#2B5FD9] h-11 px-3 text-[16px]"
      id="_r_a_"
    />
    <div
      aria-hidden="true"
      class="absolute right-3 top-1/2 -translate-y-1/2 text-[#EF4444]"
    >
      <svg
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
    </div>
  </div>
  <p
    class="text-[14px] text-[#EF4444] leading-[20px]"
    id="_r_a_-error"
    role="alert"
  >
    Invalid email
  </p>
</div>
`;
